--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.2
+specVersion: 0.0.4
 description: Gravatar for Ethereum
 repository: https://github.com/graphprotocol/example-subgraph
 schema:
@@ -6,10 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Gravity
-    network: mainnet
+    network: goerli
     source:
-      address: '0x2E645469f354BB4F5c8a05B3b30A929361cf77eC'
+      address: '0x26210C178980Ef1775712447E2d35a79e00d6B61'
       abi: Gravity
+      startBlock: 8505650
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
