--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
       # Change next line if you want to connect to a different JSON-RPC endpoint
-      ethereum: 'goerli:https://goerli.infura.io/v3/454948b137584f00b6eac27c0d69da0a'
+      ethereum: 'mainnet:testnet.bosagora.org'
       GRAPH_LOG: info
   ipfs:
     image: ipfs/go-ipfs:v0.4.23
