--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,11 +6,10 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Gravity
-    network: goerli
+    network: mainnet
     source:
-      address: '0x26210C178980Ef1775712447E2d35a79e00d6B61'
       abi: Gravity
-      startBlock: 8505650
+      startBlock: 1082561
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
