Add NftOwner and Nft entity

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build-contract": "solc contracts/ERC1155.sol --abi -o abis --overwrite && solc contracts/ERC1155.sol --bin -o bin --overwrite",
+    "build-contract721": "solc contracts/ERC721.sol --abi -o abis --overwrite && solc contracts/ERC721.sol --bin -o bin --overwrite",
     "create": "graph create example --node https://api.thegraph.com/deploy/",
     "create-local": "graph create example --node http://127.0.0.1:8020",
     "codegen": "graph codegen",
