--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -9,17 +9,36 @@ dataSources:
     network: mainnet
     source:
       abi: ERC1155
-      startBlock: 1084530
+      startBlock: 1091294
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - Gravatar
+        - NftOwner
       abis:
         - name: ERC1155
           file: ./abis/ERC1155.abi
       eventHandlers:
         - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
-          handler: handleNewGravatar
+          handler: handleNewTransfer
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: ERC721
+    network: mainnet
+    source:
+      abi: ERC721
+      startBlock: 1091294
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - NftOwner
+      abis:
+        - name: ERC721
+          file: ./abis/ERC721.abi
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleNewTransfer721
       file: ./src/mapping.ts
